refactor: refactor Create and delete APIs of collaborator
