# Fundoo-Notes-Back-End/app/controllers/collaborator.ctr.js
@@ -8,7 +8,7 @@ const logger = require('../logger/logger')
 const collaboratorService = require('../services/collaborator.svc')
 
 const inputPattern = Joi.object({
-    noteId: Joi.string().required().messages({
+    noteId: Joi.string().trim().required().messages({
         'string.empty': 'noteId can not be empty'
     })
 }).unknown(true)
@@ -23,8 +23,8 @@ class CollaboratorController {
         try {
             const collaboratorData = {
                 noteId: req.body.noteId,
-                collaboratorUserId: req.body.collaboratorUserId,
-                userId: req.decodeData.userId
+                userId: req.body.userId,
+                noteCreatorId: req.decodeData.userId
             }
 
             const validationResult = inputPattern.validate(collaboratorData)
@@ -35,17 +35,17 @@ class CollaboratorController {
             }
 
             collaboratorService.createCollaborator(collaboratorData)
-                .then(data => {
+                .then(data => {console.log("ctr:data: "+data)
+                    if (!data) {
+                        logger.error("Collaborator exists")
+                        const response = { success: false, message: "Collaborator exists" };
+                        return res.status(409).send(response)
+                    }
                     logger.info("Successfully created collaborator !")
                     const response = { success: true, message: "Successfully created collaborator !", data: data }
                     return res.status(200).send(response)
                 })
-                .catch(error => {console.log("error: "+error)
-                    if (error.name === 'MongoError' && error.code === 11000) {
-                        logger.error("Collaborator exists with this note")
-                        const response = { success: false, message: "Collaborator exists with this note" };
-                        return res.status(409).send(response)
-                    }
+                .catch(error => {
                     logger.info("Some error occurred while creating collaborator")
                     const response = { success: false, message: "Some error occurred while creating collaborator" }
                     return res.status(200).send(response)
@@ -62,33 +62,34 @@ class CollaboratorController {
      * @method collaboratorService.deleteCollaborator is service class method
      */
     deleteCollaborator = (req, res) => {
-       /*  try { */
-            const collaboratorData = {
-                collaboratorId: req.params.collaboratorID,
-                decodeData: req.decodeData
-            }
-
-            collaboratorService.deleteCollaborator(collaboratorData)
-                .then(data => {
-                    if (!data) {
-                        const response = { success: false, message: "Collaborator not found with this id" };
-                        logger.error("Collaborator not found with this id")
-                        return res.status(404).send(response)
-                    }
-                    logger.info("Successfully deleted Collaborator !")
-                    const response = { success: true, message: "Successfully deleted Collaborator!" }
-                    return res.status(200).send(response)
-                })
-                .catch(error => {console.log("Error: "+error)
-                    logger.info("Some error occurred while deleting collaborator")
-                    const response = { success: false, message: "Some error occurred while deleting collaborator" }
-                    return res.status(200).send(response)
-                })
+        /*  try { */
+        const collaboratorData = {
+            collaboratorId: req.params.collaboratorID,
+            noteCreatorId: req.decodeData.userId
         }
-        /* catch (error) {console.log("error: "+error)
-            const response = { success: false, message: "Some error occurred" }
-            return res.status(500).send(response)
-        } 
-    }*/
+
+        collaboratorService.deleteCollaborator(collaboratorData)
+            .then(data => {
+                if (!data) {
+                    const response = { success: false, message: "Collaborator not found with this id" };
+                    logger.error("Collaborator not found with this id")
+                    return res.status(404).send(response)
+                }
+                logger.info("Successfully deleted Collaborator !")
+                const response = { success: true, message: "Successfully deleted Collaborator!" }
+                return res.status(200).send(response)
+            })
+            .catch(error => {
+                console.log("Error: " + error)
+                logger.info("Some error occurred while deleting collaborator")
+                const response = { success: false, message: "Some error occurred while deleting collaborator" }
+                return res.status(200).send(response)
+            })
+    }
+    /* catch (error) {console.log("error: "+error)
+        const response = { success: false, message: "Some error occurred" }
+        return res.status(500).send(response)
+    } 
+}*/
 }
 module.exports = new CollaboratorController()
